--- a/admin-dashboard/src/app/layout/sidebar/sidebar.html
+++ b/admin-dashboard/src/app/layout/sidebar/sidebar.html
@@ -12,11 +12,16 @@
   <!-- User Profile -->
   <div class="user-profile">
     <div class="user-avatar">
-      <img [src]="user.profilePic" alt="Profile" class="avatar-img" />
+      <img
+        [src]="userAvatar"
+        [alt]="userFullName"
+        class="avatar-img"
+        (error)="$any($event.target).src = '/default-admin.png'"
+      />
     </div>
     <div>
-      <p class="user-name">{{ user.firstName }} {{ user.secondName }}</p>
-      <p class="user-email">{{ user.email }}</p>
+      <p class="user-name">{{ userFullName }}</p>
+      <p class="user-email">{{ isLoading ? 'Loading...' : displayUser.email }}</p>
     </div>
   </div>
 
@@ -52,7 +57,7 @@
   <!-- Logout -->
   <div class="logout-section" *ngIf="isLoggedIn">
     <a class="nav-link" (click)="logout()" style="cursor: pointer">
-      <i class="bi bi-box-arrow-left"></i> Logout
+      <i class="bi bi-box-arrow-left"></i> {{ isLoading ? 'Loading...' : 'Logout' }}
     </a>
   </div>
 </nav>
